# cardano-rust-android-example

./: build.gradle
src/main/: AndroidManifest.xml
src/main/c/: CMakeLists.txt  load-libs.c
src/main/java/test/cardano/: MainActivity.java
src/main/res/layout/: main.xml
